[package]
name = "lightspeed_scheduler"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "An in-process scheduler for periodic jobs. Schedule lets you run Rust functions on a cron-like schedule."
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = ["schedule", "cron", "job", "periodic"]

[dependencies]
cron = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

sqlx = { workspace = true, optional = true }
c3p0 = { workspace = true, optional = true  }
serde = { workspace = true, optional = true }

[dev-dependencies]
lightspeed_test_utils = { workspace = true }
maybe-once = { workspace = true }
rand = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
mysql = ["c3p0/mysql", "c3p0/migrate", "sqlx", "serde", "lightspeed_test_utils/mysql"]
postgres = ["c3p0/postgres", "c3p0/migrate", "sqlx", "serde", "lightspeed_test_utils/postgres"]
sqlite = ["c3p0/sqlite", "c3p0/migrate", "sqlx", "serde", "lightspeed_test_utils/sqlite"]