[package]
name = "lightspeed_scheduler"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "A scheduler for periodic jobs in Rust. In-process by default and optionally distributed via Postgres, MySQL, or SQLite — exactly one process fires each scheduled tick of a given job, no matter how many replicas are running."
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = ["schedule", "cron", "job", "periodic"]

[dependencies]
cron = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "sync", "time"] }

sqlx = { workspace = true, optional = true }
c3p0 = { workspace = true, optional = true  }
serde = { workspace = true, optional = true }

[dev-dependencies]
lightspeed_test_utils = { workspace = true }
maybe-once = { workspace = true }
rand = { workspace = true }
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
mysql = ["c3p0/mysql", "c3p0/migrate", "sqlx", "serde", "lightspeed_test_utils/mysql"]
postgres = ["c3p0/postgres", "c3p0/migrate", "sqlx", "serde", "lightspeed_test_utils/postgres"]
sqlite = ["c3p0/sqlite", "c3p0/migrate", "sqlx", "serde", "lightspeed_test_utils/sqlite"]