[package]
name = "lightspeed_test_utils"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
c3p0 = { workspace = true }
testcontainers = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = []
mysql = ["c3p0/mysql", "dep:testcontainers"]
postgres = ["c3p0/postgres", "dep:testcontainers"]
sqlite = ["c3p0/sqlite"]
