[package]
name = "lightspeed_validator"
license = "MIT"
version.workspace = true
edition.workspace = true
authors = ["Francesco Cina <ufoscout@gmail.com>"]
description = "LightSpeed Validator"
readme = "README.md"
homepage = "https://github.com/LightHero/lightspeed"
repository = "https://github.com/LightHero/lightspeed"
keywords = []

[dependencies]
email_address = { workspace = true }
lightspeed_validator_derive = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
card-validate = { workspace = true, optional = true }

[features]
default = []
credit_card = ["dep:card-validate", "lightspeed_validator_derive/credit_card"]

[dev-dependencies]
# c3p0 = { workspace = true }